<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="calculate_your">Calculate Your</string>
    <string name="age">Age</string>
    <string name="in_minutes">In Minutes</string>
    <string name="select_date">Select Date</string>
    <string name="in_minutes_til_date">In Minutes Til Date</string>
    <string name="_1400000000000">1400000000000</string>
    <string name="selected_date">Selected Date</string>
    <string name="_03_18_2022">03/18/2022</string>
</resources>